css/style.css
@font-face{
  font-family: 'Sans Medium';
  src: url("fonts/SansMedium.otf");
}
@font-face{
  font-family: 'Saol Italic';
  src: url("fonts/SaolDisplay-RegularItalic.otf");
}
@font-face{
  font-family: 'Saol';
  src: url('fonts/SaolDisplay-Regular.otf');
}

@font-face{
  font-family:  'Serif Light Italic';
  src: url('fonts/SerifLightItalic.otf');
}
@font-face{
  font-family:  'Serif Light';
  src: url('fonts/SerifLight.otf');
}
@font-face{
  font-family:  'Sans Medium Italic';
  src: url('fonts/SansMediumItalic.otf');
}
@font-face{
  font-family: 'Serif Light';
  src: url('fonts/SerifLight.otf');
}
@font-face{
  font-family: 'Neue Machina';
  src: url('fonts/NeueMachina-Regular.otf')
}


::selection{
  background-color: yellow;
}
body {
  max-width: 99vw;
  max-height: 100vh;
	font-family: 'Sans Medium';
	font-size: 16px;
	line-height: 1;
	color: black;
	margin: 6px 10px 10px 10px;
  left:16px;
  overflow-x: hidden;
  overflow-y:scroll;

  transition: background-color 0.5s;
  -webkit-transition: background-color 0.5s linear;
  -ms-transition: background-color 0.5s linear;
  transition: background-color 0.5s linear;
}
.dot{
  font-size: 16px;
  font-family: 'Saol Italic';
}
.top{
  z-index:100;
  position: fixed; 
  display:grid;
  grid-template-columns: 35vw 38vw 27vw;
  flex-direction: row;
  width: 98vw;
  padding-top:6px;
  flex-wrap:wrap;
  left:10px;
  right:10px;
  padding-right:10px;
  margin-right:10px;
  top:0;
  background-color:white;
  -webkit-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
-moz-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);

transition-property: background-color, box-shadow;
transition-duration: 0.5s, .5s;
-webkit-transition: background-color 0.5s linear;
-ms-transition: background-color 0.5s linear;
transition: background-color 0.5s linear;
}
.top p, .top a, .bottom a, #projfooter{
  color: black;
  font-family: 'Sans Medium';
  letter-spacing:-.2px;
  /*font-family: 'Neue Machina';
  text-transform:uppercase;*/
  font-size: 1.8rem;
  margin-right: 2vw;
  text-align: left;
  cursor: pointer;
}
a{
  color:black;
}
.top a:last-of-type{
  margin-right:20px;
}
.about{
  justify-self:flex-start;
}
.index{
  justify-self:flex-end;
}
.bottom{
  display: inline-flex;
  flex-direction: column;
  position:fixed;
  bottom:10px;
  z-index:100;
}
a{
  text-decoration: none;
  cursor: pointer;
}
.flip{
  transition: .2s;
  text-align:left;
  justify-content:flex-start;
}
.top .flip:hover, .flip:hover, .top .flip:active{
  transform: rotateY(180deg);
}

.big{
  font-family:"Saol Italic";
  font-size:2.5em;
  line-height:1;
  grid-row:1;
  grid-column: 1/span 2;
}
#about{
 position: absolute;
 font-size: 1.9em;;
 line-height:1.1;
 font-family: 'Times New Roman';
 left: 0;
 max-width: 100vw;
 max-height:100vh;
 bottom:160px;
 top:0;
 margin-top:80px;
 padding: 10px 16px 16px 10px;
 display: grid;
 grid-template-columns: 35vw 58vw 1fr;
 grid-template-rows: auto;
 justify-content:space-evenly;
}
#about p{
  mix-blend-mode:multiply;
  grid-row:1;
  grid-column:2;
  max-width:60vw;
  align-self:flex-start;
  justify-self:flex-start;
  padding:0;
  margin:0;
}
#about img{
  position:relative;
  grid-column:1;
  grid-row:1;
  max-width:90%;
  margin:0;
  padding:0;
  margin-right:20px;
  margin-top:2px;
  justify-self:flex-start

}

#index{
    position: fixed;
    font-size: 3em;;
    line-height:1.1;
    font-family: "Times New Roman";
    top: 10vh;
    left: 0;
    width: 98vw;
    height: 90vh;
    padding: 10px 16px 16px 10px;
    display: none;
    overflow-y:hidden;
   }
  #index p{
    position:absolute;
    font-family: 'Neue Machina';
    line-height:1;
    left:50%;
    top:30%;
    transform:translate(-50%, -50%) rotate(-2deg);
    text-align:center;
    width:80vw;
    z-index:10;
    background-color:transparent;
   }
   #index img{
     z-index:1;
     margin-top:-8vh;
     height:75vh;
     opacity:.8;
   }

#label{
  transform-origin: 50% 50%;
  position: relative;
  height: auto;
  color: black;
  font-size: 1em;
  font-family: "Neue Machina";
  margin-top: 3px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 100%;
}
.labelita{
  font-family: "Neue Machina";
  line-height:1;
  padding-right:10px;
}
.labelreg{
  font-family: "Saol";
}
.pic{
  position:absolute;
  transition: .2s;
  max-width:30vw;
  min-width:20vw;
  cursor:pointer;
}
.pic:hover{
  cursor:move;
}
.pic img{
  position:relative;
  transition: .2s;
  max-width:100%;
}
#homepage{
  max-width:98vw;
  max-height:96vh;
  margin-top:3vh;
  position:fixed;
  /*display:grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows:33% 33% 33%;
  grid-row-gap: 6px;
  grid-column-gap:6px;*/
  top:10px;
  left:10px;
}

/*.soundscapes{
  grid-column: 2;
  grid-row:2/span 2;
  align-self:center;
  margin-top:220px;
}
.majorarcana{
  grid-row:2/span 2;
  align-self:center;
}
.discoveryourair{
  grid-column:4;
  grid-row:3;
}
.discoveryourair{
  grid-column:3;
  grid-row:2/span 2;
  align-self:center;
  margin-top:-20px;
}
.spiritmolecule{
  grid-column: 4;
  grid-row:2/span 2;
  align-self:center;
  margin-top:140px;
} */

/*----------------------------------drag shit--------------------------------*/
.dragTitle{
  font-size: 1.8rem;
  position:absolute;
  bottom:10px;
  right:10px;
  cursor:pointer;
  text-align:center;
  transition:.35s;
  padding:2px;
  border-radius:6px;
}

/*----------------------------------scrollbarrrrrr--------------------------------*/
::-webkit-scrollbar {
  border-radius:40px;
  background-color:transparent;
  width:6px;
  height:20px;
  margin-right:3px;
  border:1.4px solid black;
  display:none;
}
::-webkit-scrollbar-thumb {
  height:10px;
  width:6px;
  opacity:1;
  background-color:black;
  border-radius:40px;
  margin-right:3px;
  display:none;
}
::-webkit-scrollbar-track {
width:8px;
border-radius:40px;
margin-right:3px;
display:none;
}


/*---------------------------------meeeeeeeeeedia queeeeeeeeriiiiiiiiiiiiesssssss-----------*/

@media (max-width: 1500px){ 
  .pic{
    max-width:20%;
  }

  /* #homepage{
    margin-top:8vh;
    height:90vh;
    width:96vw;
    margin-bottom:0px;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: 20% 20% 20% 20%;
  }

    .pic{
      max-width: 90%;
    }
    .reflections{
      justify-self:center;
      grid-column:4;
      grid-row:1;
      align-self:flex-start;
      margin-top:-10px;
    }
    .spiritmolecule{
      grid-column:5;
      grid-row: 3/span 2;
      margin-top:20px;
      justify-self:center;
    }
    .reconna{
      grid-column:3;
      grid-row:1/span 2;
      justify-self:flex-start;
      align-self:flex-end;
    }
    .majorarcana{
      justify-self:flex-start;
      margin-top:0px;
    }
    .discoveryourair{
      margin-top:-160px;
      grid-column:3;
      grid-row:4;
      align-self:flex-end;
    }
    .soundscapes{
      margin-top:0px;
      justify-self:center;
      grid-column:5;
      grid-row:2;
    }
    .reconna{
      grid-row:1;
      align-self:flex-start;
      margin-top:-10px;

    }
    .postcursor{
      grid-column:2;
      grid-row:3;
      margin-top:-125px;
    } */
} 

@media (max-width: 1375px) { 

}
@media (max-width: 1350px) { 
  #homepage{
    margin-top:3vh;
    width:96vw;
  }
  /*.majorarcana{
    margin-top:-60px;
  }
  .soundscapes{
    margin-top:160px;
  }
  .discoveryourair{
    margin-top: -60px;
  }
  .spiritmolecule{
    margin-top:80px;
  }*/

}

@media (max-width: 1325px) { 

}

@media (max-width: 1300px) { 

} 

@media (max-width: 1275px) { 
 /* .majorarcana{
    margin-top:-100px;
  }
  .soundscapes{
    margin-top:120px;
  }
  .discoveryourair{
    margin-top: -100px;
  }
  .spiritmolecule{
    margin-top:40px;
  }*/
}

@media (max-width: 1250px) { 

}

@media (max-width: 1225px) { 

}

@media (max-width: 1200px) { 
  #homepage{
    margin-top:8vh;
    height:91vh;
    width:95vw;
  }
  #top{
    width:96vw;
  }
  /*.majorarcana{
    margin-top:-90px;
  }
  .soundscapes{
    margin-top:100px;
  }
  .discoveryourair{
    margin-top: -100px;
  }
  .spiritmolecule{
    margin-top:20px;
  }*/
}

@media (max-width: 1175px) { 

}

@media (max-width: 1150px) { 
}

@media (max-width: 1125px) { 

}

@media (max-width: 1100px) { 
  /*.majorarcana{
    margin-top:-120px;
  }
  .soundscapes{
    margin-top:40px;
  }
  .discoveryourair{
    margin-top: -140px;
  }
  .spiritmolecule{
    margin-top:-20px;
  }*/
}

@media (max-width: 1075px) { 
}

@media (max-width: 1050px) { 

}

@media (max-width: 1025px) { 
 /* .majorarcana{
    margin-top:-160px;
  }
  .soundscapes{
    margin-top:-10px;
  }
  .discoveryourair{
    margin-top: -180px;
  }
  .spiritmolecule{
    margin-top:-80px;
  }*/
}

@media (max-width: 1000px) { 

}

@media (max-width: 975px) { 

}
@media (max-width: 950px) { 
  #homepage{
    width:94vw;
  }
}

@media (max-width: 925px) { 
  /*.majorarcana{
    margin-top: -200px;
  }
  .soundscapes{
    margin-top: -30px;
  }*/

} 

@media (max-width: 900px) { 
  #index p{
    width:85vw;
  } 
  #index{
    font-size:35px;
    max-height:90vh;
  }
  #top{
    width:94vw;
  }
  #about{
    position:relative;
    margin-left:-10px;
    grid-template-columns: 30vw 58vw 2vw;
  }
  #about p{
    grid-column:2;
    max-width:100%;
    margin:0;
    left:0;
  }
/*
  #homepage{
  margin-top:6vh;
  max-height:93vh;
  width:96vw;
  grid-template-rows: 25% 25% 25%;
  grid-template-columns: 35% 33% 31%;
  }
  .pic{
    max-width: 70%;
  }
  .reflections{
    justify-self:flex-end;
  }
  .spiritmolecule{
    grid-column:3;
    grid-row: 3/span 2;
    margin-top:20px;
    justify-self:center;
  }
  .reconna{
    grid-column:2;
    grid-row:3/span 2;
  }
  .majorarcana{
    margin-top:-100px;
    justify-self:center;
  }
  .discoveryourair{
    margin-top:-130px;
  }
  .soundscapes{
    margin-top:-80px;
    justify-self:center;
  }
  .reconna{
    margin-top: 60px;
  } */
} 

@media (max-width: 875px) { 

}

@media (max-width: 850px) { 
}

@media (max-width: 825px) { 

}

@media (max-width: 800px) { 
  #about p{
    width: 90vw;
    font-size:.75em;
  }
}

@media (max-width: 775px) { 

}

@media (max-width: 750px) { 

}

@media (max-width: 725px) { 

}

@media (max-width: 700px) { 
  #about{
    display:flex;
    flex-direction:column;
    align-items:flex-start;
    justify-items:flex-start;
    margin-top:100px;
    top:0;
    width:98vw;
    padding-bottom:160px;
    max-height:300%;
  }
  #about p{
    margin-bottom:15px;
  }
  #about img{
    max-width:99%;
    padding-right:10px;
  }
  #homepage{
    width:100vw;
    position:absolute;
    min-height:100vh;
    top:4.5vh;
    margin-top:0;
    display:flex;
    left:0;
    right:0;
    padding:0;
    flex-direction:column;
  }
  .pic #label{
    font-size:18px;
    margin-top:12px;
    margin-bottom:16px;
  }
  .pic{
    position:relative;
    max-width:98%;
    height:auto;
    cursor:pointer;
    left:10px;
    right:10px;
  }
  .pic:hover{
    cursor:pointer;
  }
  .discoveryourair{
    padding-bottom:140px;
  }

  /*.majorarcana, .soundscapes, .discoveryourair, .reconna, .spiritmolecule, .reflections, .postcursor{
    margin-top:20px;
  }*/
}

@media (max-width: 675px) { 

}

@media (max-width: 650px) { 

}
@media (max-width: 625px) { 

}

@media (max-width: 600px) { 

}

@media (max-width: 575px) { 

}

@media (max-width: 550px) { 

}

@media (max-width: 525px) { 

}

@media (max-width: 500px) { 
  .top .flip:hover, .flip:hover, .top .flip:active{
    transform: rotateY(0deg);
  }
  #index img{
    width: 70vw;
    height:auto;
  }
  #homepage{
    width:95.5vw;
  }
  .top{
    padding-bottom:0px;
  }
}

@media (max-width: 475px) { 

}

@media (max-width: 450px) { 

}





/*.querytown{
  z-index:1000;
  width:300px;
  font-size:2em;
  color:white;
  margin-top:10vh;
  margin-left:50px;
  position:fixed;
  text-align:center;
  background-color:red;
}*/

